welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: '<-' expected but ')' found.
for (j->1 to 10){
               ^Runner:22: error: illegal start of simple expression
	}
        ^